# tree-sitter-clemento

./: .gitignore  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  ZED_INTEGRATION.md  binding.gyp  build.rs  clemento_test.clem  comprehensive_test.clem  grammar.js  highlights.scm  package-lock.json  package.json  simple_test.clem  test.clem  zed-clemento.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm  tags.scm
src/: grammar.json  lib.rs  node-types.json  parser.c
test/corpus/: comments.txt  expressions.txt  functions.txt
