[package]
name = "tree-sitter-clemento"
description = "Clemento grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "clemento"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/your-username/tree-sitter-clemento"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tree-sitter = "0.20"

[build-dependencies]
cc = "1.0"
